# rent_account

./: pyproject.toml
config/: settings.py  urls.py
rent/: foms.py  models.py  urls.py  views.py
rent/migrations/: 0001_initial.py  0002_remove_container_count_container_count_shipped_and_more.py  0003_remove_company_date_container_date.py  0004_alter_container_date.py
rent/templates/rent/: base.html  container_form.html
