[tool.poetry]
name = "rent-account"
version = "0.1.0"
description = ""
authors = ["Vadim <vadim.marakushin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.3"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
python-dotenv = "^1.0.1"
shell = "^1.0.1"
ipython = "^8.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
